@@ -28,6 +28,7 @@ $Source$
       latin1_spanish_ci (introduced with MySQL 4.1.2) is now described
       correctly.
     * lang/german-*.inc.php: Updates.
+    * scripts/create-release.sh: Create backup config file (RFE #968177).
 
 2004-06-06 Garvin Hicking <me@supergarv.de>
     * libraries/display_tbl.lib.php, libraries/functions.js,
